// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render details of multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $1,141.95
  </p>
</div>
`;

exports[`should render details of one expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling 
    $1,095.00
  </p>
</div>
`;

exports[`should render summary correctly when no expenses are displayed 1`] = `
<div>
  <p>
    Viewing 
    0
     expenses totalling 
    $0.00
  </p>
</div>
`;
